# KALA

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt  test_lmstudio.py  test_native_architecture.py  test_p100.py
.claude/: settings.local.json
configs/: base_config.yaml  fractal_memory_config.yaml  lora_training_config.yaml  p100_training_config.yaml  tools_config.yaml
docs/: DEVELOPMENT_PLAN.md  ETHICS_KERNEL.md  IMMUTABILITY_ARCHITECTURE.md  IMPLEMENTATION_PROGRESS.md  KALA_COMPLETE_SUMMARY.md  KALA_VISION.md  LMSTUDIO_GUIDE.md  MULTI_AGENT.md  NATIVE_ARCHITECTURE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  QUICKSTART.md  ROADMAP.md  ROADMAP_ANALYSIS.md  SECURITY.md  TRAINING.md  WSL_SETUP.md
examples/: complete_workflow.py  lmstudio_usage.py
kala/: __init__.py  main.py
kala-ethics/: Cargo.toml  README.md  build.rs
kala-ethics/src/: decision_order.rs  hard_blocks.rs  integrity.rs  laws.rs  lib.rs
kala/core/: __init__.py  audit.py  inference.py  lmstudio_adapter.py  self_modification.py  session.py  unified_session.py
kala/ethics/: __init__.py  kernel.py
kala/fractal/: __init__.py  alphabet.py  error_correction.py  geometry.py  qpb_bias.py  tree.py
kala/models/: __init__.py  attention.py  constitutional_decoder.py  fractal_memory.py  kala_model.py
kala/qr/: __init__.py  fractal_qr.py
kala/tools/: __init__.py  base.py  code_executor.py  filesystem.py  registry.py  self_modification.py  shell.py
kala/training/: __init__.py  dataset.py  ethics_benchmark.py  ethics_generator.py  lora_trainer.py
kala/utils/: __init__.py  visualization.py
scripts/: __init__.py  benchmark_inference.py  deploy_kala.py  download_models.py  train_kala.py  train_kala_model.py
tests/: test_alphabet.py  test_error_correction.py  test_ethics_kernel.py  test_geometry.py  test_qpb_bias.py  test_tools.py  test_tree.py
