[package]
name = "kala-ethics"
version = "0.1.0"
edition = "2021"
authors = ["Hew Carroll <hew@saelix.org>"]
license = "Apache-2.0"
description = "Immutable ethics kernel for KALA - implements the Five Laws"

[lib]
name = "kala_ethics"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Cryptography for integrity verification
sha2 = "0.10"
hex = "0.4"

# Regular expressions for pattern matching
regex = "1.10"
lazy_static = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time for audit logging
chrono = "0.4"

[dev-dependencies]
# Testing
criterion = "0.5"

[[bench]]
name = "ethics_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
